--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,25 +22,25 @@ html{
   scroll-behavior: smooth;
 }
 /* Customize the scrollbar */
+/* width */
 ::-webkit-scrollbar {
-    width: 4px;  /* Reduced width of the scrollbar */
-  }
-  
-  ::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.2);  /* Background color of the track */
-    border-radius: 4px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.5); /* Scrollbar thumb color (matches the modal) */
-    border-radius: 4px;
-    border: 2px solid rgba(0, 0, 0, 0.5);  /* Optional border around thumb */
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.8);  /* Darken when hovered */
-  }
-  
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
   /* Ensure the modal's scrollable content is properly styled */
   .modal-content {
     max-height: 60vh;  /* Adjust height as needed */
